--- a/src/public/index.html
+++ b/src/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IntermediateJS Mars rovers</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.2/immutable.min.js"></script>
-    <link rel="stylesheet" href="./assets/stylesheets/index.css" />
-    <link rel="stylesheet" href="./assets/stylesheets/resets.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/4.0.0-rc.12/immutable.min.js"></script>
+    <link rel="stylesheet" href="/assets/stylesheets/resets.css">
+    <link rel="stylesheet" href="/assets/stylesheets/index.css">
 </head>
 
 <body>
@@ -18,9 +18,9 @@
             <h3>Please choose rover to select information from</h3>
             <form id="form">
                 <select name="rovers" id="rovers">
-                    <option value="curiosity"></option>
-                    <option value="opportunity"></option>
-                    <option value="spirit"></option>
+                    <option value="curiosity">Curiosity</option>
+                    <option value="opportunity">Opportunity</option>
+                    <option value="spirit">Spirit</option>
                 </select>
                 <input type="submit" value="Show Info" />
             </form>
